# TrackLab

./: .coverage  .gitignore  .prettierrc  README.md  docker-compose.yml  migrations.json  nx.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.base.json
.cache/: fastf1_http_cache.sqlite
apps/fast-f1-service/: README.md  project.json  pyproject.toml
apps/fast-f1-service/src/: main.py  route_guide_pb2.py  route_guide_pb2_grpc.py  route_guide_resources.py
apps/fast-f1-service/tests/: test_hello.py
apps/fast_f1_service/: README.md  fast_f1_service.env  project.json  pyproject.toml
apps/fast_f1_service/src/: main.py
apps/fast_f1_service/tests/: test_hello.py
apps/tracklab/: jest.config.ts  project.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.mts
apps/tracklab-api/: jest.config.ts  project.json  tsconfig.app.json  tsconfig.json  vitest.config.mts  webpack.config.js
apps/tracklab-api-e2e/: jest.config.ts  project.json
apps/tracklab-api/prisma/: schema.prisma
apps/tracklab-api/src/: main.ts
apps/tracklab-backend/: .coverage  README.md  project.json  pyproject.toml  tracklab-backend.env
apps/tracklab-backend/src/: main.py
apps/tracklab-backend/tests/: test_copilot.py
apps/tracklab-e2e/: playwright.config.ts  project.json
apps/tracklab/src/: index.html  styles.css  test-setup.ts
init-db/: init-db.sql
libs/feature/analytics/: jest.config.ts  (+2 more)
libs/proto/: README.md  project.json
minio_data/.minio.sys/: format.json
tools/: generate-python-proto.js  generate-ts-proto.js
(+533 files in other folders)
