[project]
name = "nx-workspace"
version = "1.0.0"
dependencies = [ "fast_f1_service" ]

[tool.uv.workspace]
members = [ "apps/fast_f1_service" ]

[tool.uv.sources.fast_f1_service]
workspace = true

[dependency-groups]
dev = [
  "autopep8>=2.3.1",
  "ruff>=0.8.2",
  "pytest>=8.3.4",
  "pytest-sugar>=1.0.0",
  "pytest-cov>=6.0.0",
  "pytest-html>=4.1.1"
]
